--- a/wp-content/themes/jokes/style.css
+++ b/wp-content/themes/jokes/style.css
@@ -27,5 +27,5 @@ body {
 	width: 400px;
 	margin: 0 auto;
 	font-family: ff-scala-sans-web-1,ff-scala-sans-web-2,"Lucida Grande","Helvetica",sans-serif;
-
+	line-height: 3;
 }
